test_output.txt

BSTTests.hs:107:10: error: [GHC-88464]
    Variable not in scope:
      countMatching :: (p0 -> p1 -> Bool) -> BST Int String -> a0
    |
107 |         (countMatching (\_ _ -> True) (empty :: BST Int String)))
    |          ^^^^^^^^^^^^^
